--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-kit-todo",
+  "name": "ui-kit-todo-list",
   "version": "0.0.1",
   "type": "module",
   "files": [
@@ -19,8 +19,8 @@
     "classnames": "^2.5.1",
     "glob": "^11.0.0",
     "node": "^22.11.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.28.0",
     "sass-embedded": "^1.80.6"
   },
@@ -38,6 +38,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
@@ -47,8 +48,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9",
-    "vite-plugin-dts": "^4.3.0",
-    "vite-plugin-lib-inject-css": "^2.1.1"
+    "vite-plugin-dts": "^4.3.0"
   },
   "eslintConfig": {
     "extends": [
