--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.3.0"
   },
   "eslintConfig": {
